antlr/dot/parser/dot_parser.go
// Code generated from DOT.g4 by ANTLR 4.8. DO NOT EDIT.

package parser // DOT

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'{'", "'}'", "';'", "'='", "'['", "']'", "','", "'->'", "'--'", "':'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "STRICT", "GRAPH", "DIGRAPH",
	"NODE", "EDGE", "SUBGRAPH", "NUMBER", "STRING", "ID", "HTML_STRING", "COMMENT",
	"LINE_COMMENT", "PREPROC", "WS",
}

var ruleNames = []string{
	"graph", "stmt_list", "stmt", "attr_stmt", "attr_list", "a_list", "edge_stmt",
	"edgeRHS", "edgeop", "node_stmt", "node_id", "port", "subgraph", "id",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type DOTParser struct {
	*antlr.BaseParser
}

func NewDOTParser(input antlr.TokenStream) *DOTParser {
	this := new(DOTParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "DOT.g4"

	return this
}

// DOTParser tokens.
const (
	DOTParserEOF          = antlr.TokenEOF
	DOTParserT__0         = 1
	DOTParserT__1         = 2
	DOTParserT__2         = 3
	DOTParserT__3         = 4
	DOTParserT__4         = 5
	DOTParserT__5         = 6
	DOTParserT__6         = 7
	DOTParserT__7         = 8
	DOTParserT__8         = 9
	DOTParserT__9         = 10
	DOTParserSTRICT       = 11
	DOTParserGRAPH        = 12
	DOTParserDIGRAPH      = 13
	DOTParserNODE         = 14
	DOTParserEDGE         = 15
	DOTParserSUBGRAPH     = 16
	DOTParserNUMBER       = 17
	DOTParserSTRING       = 18
	DOTParserID           = 19
	DOTParserHTML_STRING  = 20
	DOTParserCOMMENT      = 21
	DOTParserLINE_COMMENT = 22
	DOTParserPREPROC      = 23
	DOTParserWS           = 24
)

// DOTParser rules.
const (
	DOTParserRULE_graph     = 0
	DOTParserRULE_stmt_list = 1
	DOTParserRULE_stmt      = 2
	DOTParserRULE_attr_stmt = 3
	DOTParserRULE_attr_list = 4
	DOTParserRULE_a_list    = 5
	DOTParserRULE_edge_stmt = 6
	DOTParserRULE_edgeRHS   = 7
	DOTParserRULE_edgeop    = 8
	DOTParserRULE_node_stmt = 9
	DOTParserRULE_node_id   = 10
	DOTParserRULE_port      = 11
	DOTParserRULE_subgraph  = 12
	DOTParserRULE_id        = 13
)

// IGraphContext is an interface to support dynamic dispatch.
type IGraphContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsGraphContext differentiates from other interfaces.
	IsGraphContext()
}

type GraphContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyGraphContext() *GraphContext {
	var p = new(GraphContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DOTParserRULE_graph
	return p
}

func (*GraphContext) IsGraphContext() {}

func NewGraphContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *GraphContext {
	var p = new(GraphContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DOTParserRULE_graph

	return p
}

func (s *GraphContext) GetParser() antlr.Parser { return s.parser }

func (s *GraphContext) Stmt_list() IStmt_listContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStmt_listContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStmt_listContext)
}

func (s *GraphContext) GRAPH() antlr.TerminalNode {
	return s.GetToken(DOTParserGRAPH, 0)
}

func (s *GraphContext) DIGRAPH() antlr.TerminalNode {
	return s.GetToken(DOTParserDIGRAPH, 0)
}

func (s *GraphContext) STRICT() antlr.TerminalNode {
	return s.GetToken(DOTParserSTRICT, 0)
}

func (s *GraphContext) Id() IIdContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIdContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IIdContext)
}

func (s *GraphContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *GraphContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *GraphContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DOTListener); ok {
		listenerT.EnterGraph(s)
	}
}

func (s *GraphContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DOTListener); ok {
		listenerT.ExitGraph(s)
	}
}

func (p *DOTParser) Graph() (localctx IGraphContext) {
	localctx = NewGraphContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, DOTParserRULE_graph)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(29)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == DOTParserSTRICT {
		{
			p.SetState(28)
			p.Match(DOTParserSTRICT)
		}

	}
	{
		p.SetState(31)
		_la = p.GetTokenStream().LA(1)

		if !(_la == DOTParserGRAPH || _la == DOTParserDIGRAPH) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}
	p.SetState(33)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<DOTParserNUMBER)|(1<<DOTParserSTRING)|(1<<DOTParserID)|(1<<DOTParserHTML_STRING))) != 0 {
		{
			p.SetState(32)
			p.Id()
		}

	}
	{
		p.SetState(35)
		p.Match(DOTParserT__0)
	}
	{
		p.SetState(36)
		p.Stmt_list()
	}
	{
		p.SetState(37)
		p.Match(DOTParserT__1)
	}

	return localctx
}

// IStmt_listContext is an interface to support dynamic dispatch.
type IStmt_listContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStmt_listContext differentiates from other interfaces.
	IsStmt_listContext()
}

type Stmt_listContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStmt_listContext() *Stmt_listContext {
	var p = new(Stmt_listContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DOTParserRULE_stmt_list
	return p
}

func (*Stmt_listContext) IsStmt_listContext() {}

func NewStmt_listContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Stmt_listContext {
	var p = new(Stmt_listContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DOTParserRULE_stmt_list

	return p
}

func (s *Stmt_listContext) GetParser() antlr.Parser { return s.parser }

func (s *Stmt_listContext) AllStmt() []IStmtContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IStmtContext)(nil)).Elem())
	var tst = make([]IStmtContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IStmtContext)
		}
	}

	return tst
}

func (s *Stmt_listContext) Stmt(i int) IStmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStmtContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IStmtContext)
}

func (s *Stmt_listContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Stmt_listContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Stmt_listContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DOTListener); ok {
		listenerT.EnterStmt_list(s)
	}
}

func (s *Stmt_listContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DOTListener); ok {
		listenerT.ExitStmt_list(s)
	}
}

func (p *DOTParser) Stmt_list() (localctx IStmt_listContext) {
	localctx = NewStmt_listContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, DOTParserRULE_stmt_list)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(45)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<DOTParserT__0)|(1<<DOTParserGRAPH)|(1<<DOTParserNODE)|(1<<DOTParserEDGE)|(1<<DOTParserSUBGRAPH)|(1<<DOTParserNUMBER)|(1<<DOTParserSTRING)|(1<<DOTParserID)|(1<<DOTParserHTML_STRING))) != 0 {
		{
			p.SetState(39)
			p.Stmt()
		}
		p.SetState(41)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == DOTParserT__2 {
			{
				p.SetState(40)
				p.Match(DOTParserT__2)
			}

		}

		p.SetState(47)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IStmtContext is an interface to support dynamic dispatch.
type IStmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStmtContext differentiates from other interfaces.
	IsStmtContext()
}

type StmtContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStmtContext() *StmtContext {
	var p = new(StmtContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DOTParserRULE_stmt
	return p
}

func (*StmtContext) IsStmtContext() {}

func NewStmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StmtContext {
	var p = new(StmtContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DOTParserRULE_stmt

	return p
}

func (s *StmtContext) GetParser() antlr.Parser { return s.parser }

func (s *StmtContext) Node_stmt() INode_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*INode_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(INode_stmtContext)
}

func (s *StmtContext) Edge_stmt() IEdge_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEdge_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IEdge_stmtContext)
}

func (s *StmtContext) Attr_stmt() IAttr_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAttr_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAttr_stmtContext)
}

func (s *StmtContext) AllId() []IIdContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IIdContext)(nil)).Elem())
	var tst = make([]IIdContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IIdContext)
		}
	}

	return tst
}

func (s *StmtContext) Id(i int) IIdContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIdContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IIdContext)
}

func (s *StmtContext) Subgraph() ISubgraphContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISubgraphContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISubgraphContext)
}

func (s *StmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DOTListener); ok {
		listenerT.EnterStmt(s)
	}
}

func (s *StmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DOTListener); ok {
		listenerT.ExitStmt(s)
	}
}

func (p *DOTParser) Stmt() (localctx IStmtContext) {
	localctx = NewStmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, DOTParserRULE_stmt)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(56)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(48)
			p.Node_stmt()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(49)
			p.Edge_stmt()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(50)
			p.Attr_stmt()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(51)
			p.Id()
		}
		{
			p.SetState(52)
			p.Match(DOTParserT__3)
		}
		{
			p.SetState(53)
			p.Id()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(55)
			p.Subgraph()
		}

	}

	return localctx
}

// IAttr_stmtContext is an interface to support dynamic dispatch.
type IAttr_stmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsAttr_stmtContext differentiates from other interfaces.
	IsAttr_stmtContext()
}

type Attr_stmtContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAttr_stmtContext() *Attr_stmtContext {
	var p = new(Attr_stmtContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DOTParserRULE_attr_stmt
	return p
}

func (*Attr_stmtContext) IsAttr_stmtContext() {}

func NewAttr_stmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Attr_stmtContext {
	var p = new(Attr_stmtContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DOTParserRULE_attr_stmt

	return p
}

func (s *Attr_stmtContext) GetParser() antlr.Parser { return s.parser }

func (s *Attr_stmtContext) Attr_list() IAttr_listContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAttr_listContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAttr_listContext)
}

func (s *Attr_stmtContext) GRAPH() antlr.TerminalNode {
	return s.GetToken(DOTParserGRAPH, 0)
}

func (s *Attr_stmtContext) NODE() antlr.TerminalNode {
	return s.GetToken(DOTParserNODE, 0)
}

func (s *Attr_stmtContext) EDGE() antlr.TerminalNode {
	return s.GetToken(DOTParserEDGE, 0)
}

func (s *Attr_stmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Attr_stmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Attr_stmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DOTListener); ok {
		listenerT.EnterAttr_stmt(s)
	}
}

func (s *Attr_stmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DOTListener); ok {
		listenerT.ExitAttr_stmt(s)
	}
}

func (p *DOTParser) Attr_stmt() (localctx IAttr_stmtContext) {
	localctx = NewAttr_stmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, DOTParserRULE_attr_stmt)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(58)
		_la = p.GetTokenStream().LA(1)

		if !(((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<DOTParserGRAPH)|(1<<DOTParserNODE)|(1<<DOTParserEDGE))) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}
	{
		p.SetState(59)
		p.Attr_list()
	}

	return localctx
}

// IAttr_listContext is an interface to support dynamic dispatch.
type IAttr_listContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsAttr_listContext differentiates from other interfaces.
	IsAttr_listContext()
}

type Attr_listContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAttr_listContext() *Attr_listContext {
	var p = new(Attr_listContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DOTParserRULE_attr_list
	return p
}

func (*Attr_listContext) IsAttr_listContext() {}

func NewAttr_listContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Attr_listContext {
	var p = new(Attr_listContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DOTParserRULE_attr_list

	return p
}

func (s *Attr_listContext) GetParser() antlr.Parser { return s.parser }

func (s *Attr_listContext) AllA_list() []IA_listContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IA_listContext)(nil)).Elem())
	var tst = make([]IA_listContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IA_listContext)
		}
	}

	return tst
}

func (s *Attr_listContext) A_list(i int) IA_listContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IA_listContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IA_listContext)
}

func (s *Attr_listContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Attr_listContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Attr_listContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DOTListener); ok {
		listenerT.EnterAttr_list(s)
	}
}

func (s *Attr_listContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DOTListener); ok {
		listenerT.ExitAttr_list(s)
	}
}

func (p *DOTParser) Attr_list() (localctx IAttr_listContext) {
	localctx = NewAttr_listContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, DOTParserRULE_attr_list)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(66)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == DOTParserT__4 {
		{
			p.SetState(61)
			p.Match(DOTParserT__4)
		}
		p.SetState(63)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<DOTParserNUMBER)|(1<<DOTParserSTRING)|(1<<DOTParserID)|(1<<DOTParserHTML_STRING))) != 0 {
			{
				p.SetState(62)
				p.A_list()
			}

		}
		{
			p.SetState(65)
			p.Match(DOTParserT__5)
		}

		p.SetState(68)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IA_listContext is an interface to support dynamic dispatch.
type IA_listContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsA_listContext differentiates from other interfaces.
	IsA_listContext()
}

type A_listContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyA_listContext() *A_listContext {
	var p = new(A_listContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DOTParserRULE_a_list
	return p
}

func (*A_listContext) IsA_listContext() {}

func NewA_listContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *A_listContext {
	var p = new(A_listContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DOTParserRULE_a_list

	return p
}

func (s *A_listContext) GetParser() antlr.Parser { return s.parser }

func (s *A_listContext) AllId() []IIdContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IIdContext)(nil)).Elem())
	var tst = make([]IIdContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IIdContext)
		}
	}

	return tst
}

func (s *A_listContext) Id(i int) IIdContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIdContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IIdContext)
}

func (s *A_listContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *A_listContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *A_listContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DOTListener); ok {
		listenerT.EnterA_list(s)
	}
}

func (s *A_listContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DOTListener); ok {
		listenerT.ExitA_list(s)
	}
}

func (p *DOTParser) A_list() (localctx IA_listContext) {
	localctx = NewA_listContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, DOTParserRULE_a_list)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(78)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<DOTParserNUMBER)|(1<<DOTParserSTRING)|(1<<DOTParserID)|(1<<DOTParserHTML_STRING))) != 0) {
		{
			p.SetState(70)
			p.Id()
		}
		p.SetState(73)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == DOTParserT__3 {
			{
				p.SetState(71)
				p.Match(DOTParserT__3)
			}
			{
				p.SetState(72)
				p.Id()
			}

		}
		p.SetState(76)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == DOTParserT__6 {
			{
				p.SetState(75)
				p.Match(DOTParserT__6)
			}

		}

		p.SetState(80)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IEdge_stmtContext is an interface to support dynamic dispatch.
type IEdge_stmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsEdge_stmtContext differentiates from other interfaces.
	IsEdge_stmtContext()
}

type Edge_stmtContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyEdge_stmtContext() *Edge_stmtContext {
	var p = new(Edge_stmtContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DOTParserRULE_edge_stmt
	return p
}

func (*Edge_stmtContext) IsEdge_stmtContext() {}

func NewEdge_stmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Edge_stmtContext {
	var p = new(Edge_stmtContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DOTParserRULE_edge_stmt

	return p
}

func (s *Edge_stmtContext) GetParser() antlr.Parser { return s.parser }

func (s *Edge_stmtContext) EdgeRHS() IEdgeRHSContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEdgeRHSContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IEdgeRHSContext)
}

func (s *Edge_stmtContext) Node_id() INode_idContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*INode_idContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(INode_idContext)
}

func (s *Edge_stmtContext) Subgraph() ISubgraphContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISubgraphContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}
